fix tag_head_wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1268,6 +1268,10 @@ footer {
 	.main-content {
 		margin-top: 30px;
 	}
+	
+	.tag_head_wrap {
+		height: 280px;
+	}
 
 }
 
